crates/aipm/src/snapshots/aipm__wizard__tests__resolve_workspace_both_snapshot.snap
---
source: crates/aipm/src/wizard.rs
expression: "format!(\"{:?}\", result)"
---
(true, true, false)
