crates/aipm/src/snapshots/aipm__wizard__tests__resolve_workspace_decline_starter_snapshot.snap
---
source: crates/aipm/src/wizard.rs
expression: "format!(\"{:?}\", result)"
---
WizardAnswers { workspace: false, marketplace: true, no_starter: true, marketplace_name: "local-repo-plugins", engines_scaffold: EngineSet(CLAUDE | COPILOT), engines_support: None }
