crates/aipm/src/snapshots/aipm__wizard__tests__resolve_workspace_empty_name_uses_default_snapshot.snap
---
source: crates/aipm/src/wizard.rs
expression: "format!(\"{:?}\", result)"
---
(false, true, false, "local-repo-plugins")
