crates/aipm/src/snapshots/aipm__wizard__tests__resolve_workspace_name_flag_snapshot.snap
---
source: crates/aipm/src/wizard.rs
expression: "format!(\"{:?}\", result)"
---
WizardAnswers { workspace: false, marketplace: true, no_starter: false, marketplace_name: "preset-mkt", engines_scaffold: EngineSet(CLAUDE | COPILOT), engines_support: None }
