crates/aipm/src/snapshots/aipm__wizard__tests__workspace_prompts_no_starter_flag_snapshot.snap
---
source: crates/aipm/src/wizard.rs
expression: format_steps(&steps)
---
Step 1:
  Label: Marketplace name:
  Kind: Text (placeholder: "local-repo-plugins")
  Validate: marketplace-name
  Help: Lowercase alphanumeric with hyphens, or press Enter for default
